--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 	<link rel="stylesheet" href="css/style.css">
 
 </head>
-<body>
-	<header class="header">
+<body class="blood">
+	<div class="container">
+		<header class="header">
 		<a href="#" class="logo-link">
 			<img src="img/logo.png">
 		</a>
@@ -38,16 +39,26 @@
 		<div class="hero-text">
 			<span class="date">16 сентября 2021</span>
 			<img src="img/Venom 2.png" class="venom-text">	
-		</div>
-		<p class="film-description">
+			<p class="film-description">
 			В настырном журналисте по-прежнему живет симбиот.  Том Харди в образе обаятельного суперзлодея  из комиксов Marvel.
-		</p>
+			</p>
+		</div>
+		
+		<div class="button-group">
+			<button class="button">
+				<img src="img/play.svg" class="play-logo">
+				<span class="play-text">смотреть трейлер</span>	
+			</button>
 
-
-
-
-
+			<a href="#" class="premiere-link">
+				<img src="img/ticket.svg" class="premiere-logo">
+				<span class="premiere-text">смотреть трейлер</span>	
+			</a>
+		</div>
 	</div>
+	<img src="img/carnage.png" class="carnage-big">
+	
+	
 
 
 
